microbot/daemon.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: microbot
  name: microbot-daemonset
  namespace: microbot
spec:
  selector:
    matchLabels:
      app: microbot
  template:
    metadata:
      labels:
        app: microbot
    spec:
      containers:
      - image: dontrebootme/microbot:v1
        imagePullPolicy: IfNotPresent
        name: microbot
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
