microbot/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microbot
  name: microbot-service
  namespace: microbot
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: microbot
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
