microbot/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-04-06T21:23:39Z"
  labels:
    app: microbot
  name: microbot-service
  namespace: default
spec:
  clusterIP: 10.152.183.160
  clusterIPs:
  - 10.152.183.160
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: microbot
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
