microbot/svc-traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  name: microbot-service
  namespace: microbot
spec:
  selector:
    app: microbot
  type: ClusterIP
  ports:
    - name: http
      port: 80
